--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,9 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [ Aula_5 ]
+    branches: [ main ]
   pull_request:
-    branches: [ Aula_5 ]
+    branches: [ main ]
 
 jobs:
 
