--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -20,4 +20,4 @@ jobs:
       # Username used to log against the Docker registry
         username: mrezende1
       # Password or personal access token used to log against the Docker registry
-        password:
+        password: ${{ secrets.PASSWORD_DOCKER_HUB }}
